# scraper

./: .gitignore  input.csv  out.csv  scraper.cabal
src/: Main.hs
